# robotic_arm

./: .gitignore  TASK_INSTRUCTION.md  TASK_LOG.md
src/: README.md
src/gesture_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/gesture_interface/config/: gesture_params.yaml  task_mappings.yaml
src/gesture_interface/gesture_interface/: gesture_manager_node.py  gesture_player.py  gesture_recorder.py  gesture_storage.py  task_orchestrator_node.py  trajectory_builder.py
src/gesture_interface/gestures/: align_t_task.yaml  demo.yaml  me1.yaml  my_new_push.yaml  my_new_push_2.yaml  push_final.yaml  push_t.yaml  test.yaml  trial1.yaml
src/gesture_interface/launch/: gesture_interface.launch.py
src/gesture_interface_msgs/: CMakeLists.txt  package.xml
src/gesture_interface_msgs/srv/: StartRecording.srv
src/simple_moveitmanual/: CMakeLists.txt  package.xml
src/simple_moveitmanual/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  simplearm.srdf
src/simple_moveitmanual/launch/: demo.launch.py  moveit.launch.py  sim_task.launch.py
src/simple_moveitmanual/models/highlight_zone/: model.config  model.sdf
src/simple_moveitmanual/models/t_shape/: model.config  model.sdf
src/simple_moveitmanual/rviz/: arm.rviz
src/simple_moveitmanual/urdf/: simplearm.urdf  simplearm_gazebo.urdf
src/simple_moveitmanual/worlds/: align_t_world.world
