<?xml version="1.0"?>
<package format="3">
  <name>gesture_interface_msgs</name>
  <version>0.1.0</version>
  <description>Custom services for gesture interface</description>

  <maintainer email="aswin.kumar@gahanai.com">Aswin Kumar</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Interface group (critical for rosidl_generate_interfaces) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
